--- a/congratulation.html
+++ b/congratulation.html
@@ -20,14 +20,14 @@
                     your payment for School fees has been submitted successfully. Thank you!!
                 </p>
             </div>
-            <div class="flex flex-col gap-[0.2rem] justify-center items-center fixed bottom-[30px] left-0 right-0 right-0"> 
+            <a href="index.html" class="flex flex-col gap-[0.2rem] justify-center items-center fixed bottom-[30px] left-0 right-0 right-0"> 
                 <div class="w-[50px]">
                     <img src="files/kudiPay-logo.png" alt="" class="w-[100%] object-cover object-center">
                 </div>
                 <div class="flex flex-col justify-center">
                     <h1 class="text-2xl font-bold text-[#3b5361] flex">Bubble <span class="text-[#FC5944]">Pay</span></h1>
                 </div>
-            </div>
+            </a>
         </section>
     </main>
 </body>
