--- a/otp-approval.html
+++ b/otp-approval.html
@@ -11,14 +11,14 @@
 <body>
     <main class=" flex justify-center items-center p-4">
         <section class=" w-[100%] h-[100%]">
-            <div class="flex flex-col gap-[0.2rem] justify-center items-center">
+            <a href="index.html" class="flex flex-col gap-[0.2rem] justify-center items-center">
                 <div class="w-[60px]">
                     <img src="files/kudiPay-logo.png" alt="" class="w-[100%] object-cover object-center">
                 </div>
                 <div class="flex flex-col justify-center">
                     <h1 class="text-2xl font-bold text-[#3b5361] flex">Bubble <span class="text-[#FC5944]">Pay</span></h1>
                 </div>
-            </div>
+            </a>
             <div class="mt-[1rem]">
                 <p class="text-[16px] font-bold text-center font-bold text-slate-600 pb-[0.5rem]">Approve Payment Request</p>
                 <p class="text-[14px] font-bold text-center font-medium text-slate-600">
