--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     Bubble <span class="text-[#FC5944]">Pay</span>
                 </h1>
             </div>
-            <div class="bg-gray-100 p-4 rounded-lg shadow-md">
+            <div class="bg-gray-50 border border-slate-200 p-4 rounded-lg">
                 <p class="text-sm font-medium text-slate-600">
                     Invoice for: <span class="font-bold block mt-1">Mr. Duah</span>
                 </p>
@@ -27,7 +27,7 @@
         </section>
 
         <!-- Invoice Details -->
-        <section class="space-y-4 p-4 bg-gray-100 rounded-xl">
+        <section class="space-y-4 p-4 bg-gray-100 rounded-xl shadow-inner">
             <div class="space-y-4">
                 <!-- Transaction Date -->
                 <div class="flex flex-col gap-[0.1rem]  rounded-lg">
@@ -57,13 +57,13 @@
                         <p class="text-sm font-bold text-slate-600">Items</p>
                         <div class="w-[100%]">
                             <div class="relative">
-                                <ul class="text-sm text-slate-400 list-disc-none pl-4 max-h-12 overflow-y-hidden transition-all duration-300" id="itemsList">
-                                    <li>Porridge</li>
-                                    <li>Koosie</li>
-                                    <li>Jollof Rice</li>
-                                    <li>Fried Chicken</li>
-                                    <li>Vegetable Salad</li>
-                                    <li>Fruit Juice</li>
+                                <ul class="text-sm text-slate-400 list-disc-none max-h-12 overflow-y-hidden transition-all duration-300" id="itemsList">
+                                    <li class="border-b py-[0.2rem]  border-gray-200">Porridge</li>
+                                    <li class="border-b py-[0.2rem]  border-gray-200">Koosie</li>
+                                    <li class="border-b py-[0.2rem]  border-gray-200">Jollof Rice</li>
+                                    <li class="border-b py-[0.2rem]  border-gray-200">Fried Chicken</li>
+                                    <li class="border-b py-[0.2rem]  border-gray-200">Vegetable Salad</li>
+                                    <li class="border-b py-[0.2rem]  border-gray-200">Fruit Juice</li>
                                 </ul>
                                 <div class="absolute bottom-0 left-0 right-0 h-6 bg-gradient-to-t from-gray-50 pointer-events-none" id="fadeOverlay"></div>
                             </div>
