--- a/debit-card-wallet.html
+++ b/debit-card-wallet.html
@@ -29,7 +29,7 @@
                         <p class="text-[12px] font-bold text-slate-400 p-0 m-0">Debit Card</p>
                     </div>
                 </div>
-                <p class="text-[#E34C00]"><a href="payment-methods.html">Change</a></p>
+                <p class="text-[#E34C00] pr-[0.5rem]"><a href="payment-methods.html">Change</a></p>
             </div>
 
             <div class="mt-[1rem]">
