--- a/index.html
+++ b/index.html
@@ -15,14 +15,26 @@
                 <div class="w-14">
                     <img src="files/kudiPay-logo.png" alt="Logo" class="w-full">
                 </div>
-                <h1 class="text-2xl font-bold text-[#3b5361]">
+                <h1 class="text-2xl font-bold flex text-[#3b5361]">
                     Bubble <span class="text-[#FC5944]">Pay</span>
                 </h1>
             </div>
             <div class="bg-gray-50 border border-slate-200 p-4 rounded-lg">
                 <p class="text-sm font-medium text-slate-600">
-                    Invoice for: <span class="font-bold block mt-1">Mr. Duah</span>
+                    Invoice for: <span class="font-bold block my-1">Mr. Duah</span>
                 </p>
+                <hr>
+                <div class="text-sm font-medium text-rose-600 mt-1">
+                    Invoice from: 
+                    <div class="flex  gap-[0.3rem]">
+                        <i class="fa-solid fa-circle-check text-slate-400 text-12px mr-[0.3rem] mt-[0.5rem]"></i>
+                        <div class="">
+                            <div class="">
+                               <span class="font-bold block mt-1">Christ Ambassadors School</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -67,7 +79,7 @@
                                 </ul>
                                 <div class="absolute bottom-0 left-0 right-0 h-6 bg-gradient-to-t from-gray-50 pointer-events-none" id="fadeOverlay"></div>
                             </div>
-                            <button onclick="toggleItems()" class="text-[#005DD8] text-xs font-bold mt-1 flex items-center gap-1">
+                            <button onclick="toggleItems()" class="text-rose-400 text-xs font-bold mt-1 flex items-center gap-1">
                                 Show more
                                 <i class="fas fa-chevron-down text-xs transition-transform" id="chevron"></i>
                             </button>
