--- a/mtn-wallet.html
+++ b/mtn-wallet.html
@@ -16,7 +16,7 @@
                     <img src="files/kudiPay-logo.png" alt="" class="w-[100%] object-cover object-center">
                 </div>
                 <div class="flex flex-col justify-center">
-                    <h1 class="text-2xl font-bold text-[#3b5361] flex">Bubble <span class="text-[#FC5944]">Pay</span></h1>
+                    <h1 class="text-2xl font-bold flex text-[#3b5361] flex">Bubble <span class="text-[#FC5944]">Pay</span></h1>
                 </div>
             </div>
             <div class="mt-[1rem] flex justify-between items-center">
