--- a/debit-card-wallet.html
+++ b/debit-card-wallet.html
@@ -38,7 +38,7 @@
                         <p class="text-center font-bold text-slate-600 text-[14px]">Enter your card details to pay</p>
                     </div>
                     <div class="flex items-center text-slate-400 relative">
-                        <input type="tel" name="name" id="name" placeholder="Name on Card" class="w-[100%] text-[14px] font-medium bg-transparent py-[0.7rem] pl-[2.5rem] outline-none border border-slate-200 rounded-[35px]">
+                        <input type="text" name="name" id="name" placeholder="Name on Card" class="w-[100%] text-[14px] font-medium bg-transparent py-[0.7rem] pl-[2.5rem] outline-none border border-slate-200 rounded-[35px]">
                         <i class="fa-solid fa-user absolute text-[14px] left-[10px]"></i>
                     </div>
                     <div class="flex items-center text-slate-400 relative">
@@ -51,7 +51,7 @@
                             <i class="fa-solid fa-calendar-days text-[14px] absolute left-[10px]"></i>
                         </div>
                         <div class="flex items-center text-slate-400 relative">
-                            <input type="text" name="cvv" id="cvv" placeholder="CVV" class="w-[100%] text-[14px] font-medium bg-transparent py-[0.7rem] px-[2.5rem] outline-none border border-slate-200 rounded-[35px]">
+                            <input type="tel" name="cvv" id="cvv" placeholder="CVV" class="w-[100%] text-[14px] font-medium bg-transparent py-[0.7rem] px-[2.5rem] outline-none border border-slate-200 rounded-[35px]">
                             <i class="fa-solid fa-key absolute text-[14px] left-[10px]"></i>
                         </div>
                     </div>
