--- a/debit-card-wallet.html
+++ b/debit-card-wallet.html
@@ -55,7 +55,7 @@
                             <i class="fa-solid fa-key absolute text-[14px] left-[10px]"></i>
                         </div>
                     </div>
-                    <button class="inline-block bg-[#FC5944]  px-[1rem] p-[0.5rem] rounded-[60px] w-[100%]">
+                    <button type="submit" class="inline-block bg-[#FC5944]  px-[1rem] p-[0.5rem] rounded-[60px] w-[100%]">
                         <a href="otp-approval.html"" class="no-underline text-white uppercase font-bold text-[13px]">pay (GHS 1000)</a>
                     </button>
                 </form>
