--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
             </div>
             <div class="bg-gray-50 border border-slate-200 p-4 rounded-lg">
                 <p class="text-sm font-medium text-slate-600">
-                    Invoice for: <span class="font-bold block my-1">Ennam's School fees</span>
+                    Invoice for: 
+                    <span class="font-bold block my-1 flex justify-between">
+                        Ennam's School fees
+                        <small class="text-[13px] font-medium">Class: (6) </small>
+                    </span>
                 </p>
                 <hr>
                 <div class="text-sm font-medium text-slate-600 mt-1">
@@ -50,20 +54,19 @@
                 <!-- Invoice ID -->
                 <div class="flex flex-col gap-[0.1rem]">
                     <p class="text-sm font-bold text-slate-600">Invoice ID</p>
-                    <p class="text-sm text-slate-400">FF201ED810001</p>
+                    <p class="text-sm text-slate-400">APZQ - 1ED810001</p>
                 </div>
 
                 <!-- Description Textarea -->
                 <div class="flex flex-col gap-[0.1rem] items-start">
                     <p class="text-sm font-bold text-slate-600">Description</p>
                     <textarea 
-                        class="w-[100%] text-sm text-slate-400 bg-transparent resize-none border rounded-lg p-2" 
-                        rows="2"
+                        class="w-[100%] text-sm text-slate-600 bg-transparent resize-none border rounded-lg p-2" 
+                        rows="3"
                         disabled
                     >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates quod veritatis quae temporibus </textarea>
                 </div>
 
-                <!-- Toggleable Items List -->
                 <!-- <div class="relative">
                     <div class="flex flex-col gap-[0.1rem] items-start">
                         <div class="flex justify-between w-[100%]">
@@ -95,101 +98,93 @@
                 </div> -->
 
                    <!-- Swipable Items Carousel -->
-            <div class="flex flex-col gap-[0.1rem] items-start">
-                <p class="text-sm font-bold text-slate-600 mb-2">Items</p>
-                <div class="relative w-full">
-                    <div class="carousel-container fade-edge flex overflow-x-auto pb-4 space-x-3" 
-                         id="itemsCarousel"
-                         ontouchstart="handleTouchStart(event)"
-                         ontouchend="handleTouchEnd(event)">
-                        <!-- Item Cards -->
-                        <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
-                            <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                <p class="text-xs text-slate-400 ">Term 1 - 2024</p>
-                                <p class="text-xs text-slate-400">Qty: 1</p>
+                <div class="flex flex-col gap-[0.1rem] items-start">
+                    <p class="text-sm font-bold text-slate-600 mb-2">Items</p>
+                    <div class="relative w-full">
+                        <div class="carousel-container fade-edge flex overflow-x-auto pb-4 space-x-3" 
+                            id="itemsCarousel"
+                            ontouchstart="handleTouchStart(event)"
+                            ontouchend="handleTouchEnd(event)">
+                            <!-- Item Cards -->
+                            <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
+                               <div class="">
+                                    <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
+                                        <p class="text-sm font-medium text-slate-600">School Fees</p>
+                                        <p class="text-xs text-slate-400">Qty: 1</p>
+                                    </div>
+                                    <div class=" w-[180px] p-[0.5rem]">
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-xs text-slate-500 ">Unit Price:</p>
+                                            <p class="text-xs text-slate-400 ">GHS 3,000.00</p>
+                                        </div>
+                                    </div>
+                                    <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
+                                        <!-- <p class="text-xs text-slate-600 ">Amount:</p> -->
+                                        <p class="text-sm font-medium text-nowrap text-slate-600">GHS 3,000.00</p>
+                                    </div>
+                               </div>
                             </div>
-                            <div class=" w-[180px] p-[0.5rem]">
-                                <div class="flex items-center justify-between">
-                                    <p class="text-sm font-medium text-slate-600">School Fees</p>
-                                </div>
-                                <div class="">
-                                    <p class="text-sm font-medium text-nowrap text-slate-600">GHS 3,000.00</p>
-                                </div>
+                            <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
+                               <div class="">
+                                    <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
+                                        <p class="text-sm font-medium text-slate-600">Uniform</p>
+                                        <p class="text-xs text-slate-400">Qty: 3</p>
+                                    </div>
+                                    <div class=" w-[180px] p-[0.5rem]">
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-xs text-slate-500 ">Unit Price:</p>
+                                            <p class="text-xs text-slate-400 ">GHS 300.00</p>
+                                        </div>
+                                    </div>
+                                    <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
+                                        <!-- <p class="text-xs text-slate-600 ">Amount:</p> -->
+                                        <p class="text-sm font-medium text-nowrap text-slate-600">GHS 900.00</p>
+                                    </div>
+                               </div>
                             </div>
-                            <div id="viewMoreBtn" class="text-[12px] cursor-pointer text-blue-900 text-center pt-[0.5rem] border-opacity-20 border-t border-slate-400">
-                                <i class="fa-solid fa-eye"></i>
-                                view
+                            <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
+                               <div class="">
+                                    <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
+                                        <p class="text-sm font-medium text-slate-600">Books</p>
+                                        <p class="text-xs text-slate-400">Qty: 20</p>
+                                    </div>
+                                    <div class=" w-[180px] p-[0.5rem]">
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-xs text-slate-500 ">Unit Price:</p>
+                                            <p class="text-xs text-slate-400 ">GHS 50.00</p>
+                                        </div>
+                                    </div>
+                                    <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
+                                        <!-- <p class="text-xs text-slate-600 ">Amount:</p> -->
+                                        <p class="text-sm font-medium text-nowrap text-slate-600">GHS 1,000.00</p>
+                                    </div>
+                               </div>
                             </div>
+                          
                         </div>
-                        <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
-                            <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                <p class="text-xs text-slate-400 ">Term 1 - 2024</p>
-                                <p class="text-xs text-slate-400">Qty: 3</p>
-                            </div>
-                            <div class=" w-[180px] p-[0.5rem]">
-                                <div class="flex items-center justify-between">
-                                    <p class="text-sm font-medium text-slate-600">Uniforms</p>
-                                </div>
-                                <div class="">
-                                    <p class="text-sm font-medium text-nowrap text-slate-600">GHS 500.00</p>
-                                </div>
-                            </div>
-                            <div id="viewMoreBtn" class="text-[12px] cursor-pointer text-blue-900 text-center pt-[0.5rem] border-opacity-20 border-t border-slate-400">
-                                <i class="fa-solid fa-eye"></i>
-                                view
-                            </div>
-                        </div>
-                        <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
-                            <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                <p class="text-xs text-slate-400 ">Term 1 - 2024</p>
-                                <p class="text-xs text-slate-400">Qty: 10</p>
-                            </div>
-                            <div class=" w-[180px] p-[0.5rem]">
-                                <div class="flex items-center justify-between">
-                                    <p class="text-sm font-medium text-slate-600">Books</p>
-                                </div>
-                                <div class="">
-                                    <p class="text-sm font-medium text-nowrap text-slate-600">GHS 1,000.00</p>
-                                </div>
-                            </div>
-                            <div class="text-[12px] text-blue-900 border-t border-slate-400 border-opacity-20 text-center pt-[0.5rem]">
-                                <i class="fa-solid fa-eye"></i>
-                                view
-                            </div>
-                        </div>
-
-                        <!-- Add more item cards here -->
                     </div>
+                    <!-- <p class="text-xs text-slate-400 mt-1">Swipe left to view more items</p> -->
                 </div>
-                <!-- <p class="text-xs text-slate-400 mt-1">Swipe left to view more items</p> -->
-            </div>
-
                 <!-- Tax -->
                 <div class="flex flex-col gap-[0.1rem]">
                     <p class="text-sm font-bold text-slate-600">Tax</p>
                     <p class="text-sm text-slate-400">GHS 0.00</p>
                 </div>
 
-                <!-- Amount -->
-                <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-bold text-slate-600">Amount</p>
-                    <p class="text-sm text-slate-400">GHS 3,000.00</p>
-                </div>
-
                 <!-- Status -->
-                <div class="flex flex-col gap-[0.1rem]">
+                <!-- <div class="flex flex-col gap-[0.1rem]">
                     <p class="text-sm font-bold text-slate-600">Status</p>
                     <span class="bg-red-100 w-[80px] text-center text-red-600 px-3 py-1 rounded-full text-xs font-bold">
                         OVERDUE
                     </span>
-                </div>
+                </div> -->
             </div>
 
             <!-- Total Amount -->
             <div class="pt-4 mt-4 border-t border-gray-200">
                 <div class="flex flex-col gap-[0.1rem]">
                     <p class="text-lg font-bold text-slate-600">Total</p>
-                    <p class="text-lg font-bold text-[#FC5944]">GHS 1000.00</p>
+                    <p class="text-lg font-bold text-rose-800">GHS 4,900.00</p>
                 </div>
             </div>
         </section>
