--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <div class="flex flex-col gap-[0.1rem] items-start">
                     <p class="text-sm font-bold text-slate-600">Description</p>
                     <textarea 
-                        class="w-[100%] text-sm text-slate-600 bg-transparent resize-none border rounded-lg p-2" 
-                        rows="3"
+                        class="w-[100%] text-sm text-slate-700 bg-transparent resize-none border border-slate-400 border-opacity-10 rounded-lg p-2" 
+                        rows="2"
                         disabled
-                    >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates quod veritatis quae temporibus </textarea>
+                    >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates quod veritatis</textarea>
                 </div>
 
                 <!-- <div class="relative">
@@ -167,8 +167,8 @@
                 </div>
                 <!-- Tax -->
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-bold text-slate-600">Tax</p>
-                    <p class="text-sm text-slate-400">GHS 0.00</p>
+                    <p class="text-sm font-semibold text-slate-600">Tax</p>
+                    <p class="text-sm font-medium text-slate-500">GHS 0.00</p>
                 </div>
 
                 <!-- Status -->
@@ -183,8 +183,8 @@
             <!-- Total Amount -->
             <div class="pt-4 mt-4 border-t border-gray-200">
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-lg font-bold text-slate-600">Total</p>
-                    <p class="text-lg font-bold text-rose-800">GHS 4,900.00</p>
+                    <p class="text-lg font-medium text-slate-600">Total</p>
+                    <p class="text-lg font-semibold text-gray-500">GHS 4,900.00</p>
                 </div>
             </div>
         </section>
@@ -198,7 +198,7 @@
             </button>
 
             <p class="text-xs text-center text-gray-500">
-                <a href="#!" class="text-[#005DD8] underline font-bold">Sign In</a> 
+                <a href="#!" class="text-blue-800 underline font-bold">Sign In</a> 
                 to view History
             </p>
         </section>
