--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body class="bg-gray-50 ">
     <main class="bg-white rounded-2xl shadow-lg p-2">
-        <!-- Header Section -->
         <section class="mb-4">
             <div class="flex justify-center items-center gap-1 mb-4">
                 <div class="w-14">
@@ -20,106 +19,73 @@
                 </h1>
             </div>
             <div class="bg-gray-50 border border-slate-200 p-4 rounded-lg">
-                <p class="text-sm font-medium text-slate-600">
-                    Invoice for: 
-                    <span class="font-bold block my-1 flex justify-between">
+                <div class="">
+                   <p class="text-sm font-medium text-blue-500">
+                        Invoice for: 
+                   </p>
+                    <span class="text-sm font-regular block text-slate-700 my-1 flex justify-between">
                         Ennam's School fees
-                        <small class="text-[13px] font-medium">Class: (6) </small>
+                        <!-- <small class="text-[13px] text-blue-500 font-medium">Class: (6) </small> -->
                     </span>
-                </p>
+                </div>
                 <hr>
-                <div class="text-sm font-medium text-slate-600 mt-1">
-                    Invoice from: 
-                    <div class="flex  gap-[0.3rem]">
-                        <i class="fa-solid fa-circle-check text-slate-400 text-12px mr-[0.3rem] mt-[0.5rem]"></i>
+                <div class=" mt-1">
+                    <div class="text-sm font-medium text-blue-500">
+                        Invoice from: 
+                    </div>
+                    <div class="flex text-sm gap-[0.3rem]">
+                        <i class="fa-solid fa-circle-check text-green-500 text-12px mr-[0.3rem] mt-[0.5rem]"></i>
                         <div class="">
-                            <div class="">
-                               <span class="font-bold block mt-1">Christ Ambassadors School</span>
-                            </div>
+                            <span class=" text-slate-700 block mt-1">Christ Ambassadors School</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Invoice Details -->
         <section class="space-y-4 p-4 bg-gray-50 rounded-xl shadow-sm border border-slate-200">
             <div class="space-y-4">
-                <!-- Transaction Date -->
                 <div class="flex flex-col gap-[0.1rem]  rounded-lg">
-                    <p class="text-sm font-bold text-slate-600">Transaction Date</p>
-                    <p class="text-sm text-slate-400">07-SEP-2024 22:00</p>
+                    <p class="text-sm font-bold text-blue-500">Transaction Date</p>
+                    <p class="text-sm text-slate-700">07-SEP-2024 22:00</p>
                 </div>
 
-                <!-- Invoice ID -->
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-bold text-slate-600">Invoice ID</p>
-                    <p class="text-sm text-slate-400">APZQ - 1ED810001</p>
+                    <p class="text-sm font-bold text-blue-500">Invoice ID</p>
+                    <p class="text-sm text-slate-700">APZQ - 1ED810001</p>
                 </div>
 
-                <!-- Description Textarea -->
                 <div class="flex flex-col gap-[0.1rem] items-start">
-                    <p class="text-sm font-bold text-slate-600">Description</p>
+                    <p class="text-sm font-bold text-blue-500">Description</p>
                     <textarea 
                         class="w-[100%] text-sm text-slate-700 bg-transparent resize-none border border-slate-400 border-opacity-10 rounded-lg p-2" 
                         rows="2"
                         disabled
                     >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates quod veritatis</textarea>
                 </div>
-
-                <!-- <div class="relative">
-                    <div class="flex flex-col gap-[0.1rem] items-start">
-                        <div class="flex justify-between w-[100%]">
-                            <p class="text-sm font-bold text-slate-600">Items</p>
-                            <div class="flex justify-between w-full max-w-[150px]">
-                                <p class="text-sm font-bold text-slate-600">Qty</p>
-                                <p class="text-sm font-bold text-slate-600">Unit Price</p>
-                            </div>
-                        </div>
-                        <div class="w-[100%]">
-                            <div class="relative ">
-                                <div class="flex justify-between w-[100%] text-sm text-slate-400 max-h-12 overflow-y-hidden transition-all duration-300" id="itemsList">
-                                    <div class="">
-                                        <p class="">School fees</p>
-                                    </div>
-                                    <div class="flex justify-between w-full max-w-[150px]">
-                                        <p class="">1</p>
-                                        <p class="">GHS 3,000.00</p>
-                                    </div>
-                                </div>
-                                <div class="absolute bottom-0 left-0 right-0 h-6 bg-gradient-to-t from-gray-50 pointer-events-none" id="fadeOverlay"></div>
-                            </div>
-                            <button onclick="toggleItems()" class="text-rose-400 text-xs font-bold mt-1 flex items-center gap-1">
-                                Show more
-                                <i class="fas fa-chevron-down text-xs transition-transform" id="chevron"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div> -->
-
-                   <!-- Swipable Items Carousel -->
                 <div class="flex flex-col gap-[0.1rem] items-start">
-                    <p class="text-sm font-bold text-slate-600 mb-2">Items</p>
+                    <p class="text-sm font-bold text-blue-500 mb-2">Items</p>
                     <div class="relative w-full">
                         <div class="carousel-container fade-edge flex overflow-x-auto pb-4 space-x-3" 
                             id="itemsCarousel"
                             ontouchstart="handleTouchStart(event)"
                             ontouchend="handleTouchEnd(event)">
-                            <!-- Item Cards -->
                             <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
                                <div class="">
                                     <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                        <p class="text-sm font-medium text-slate-600">School Fees</p>
-                                        <p class="text-xs text-slate-400">Qty: 1</p>
+                                        <p class="text-sm font-medium text-blue-500">School Fees </p>
                                     </div>
-                                    <div class=" w-[180px] p-[0.5rem]">
+                                    <div class=" w-[280px] p-[0.5rem]">
                                         <div class="flex items-center justify-between">
-                                            <p class="text-xs text-slate-500 ">Unit Price:</p>
-                                            <p class="text-xs text-slate-400 ">GHS 3,000.00</p>
+                                            <p class="text-xs text-slate-700 ">Unit Price:</p>
+                                            <p class="text-xs text-slate-700 ">GHS 3,000.00</p>
+                                        </div>
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-xs text-slate-700">Qty: </p>
+                                            <p class="text-xs text-slate-700 ">1</p>
                                         </div>
                                     </div>
                                     <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
-                                        <!-- <p class="text-xs text-slate-600 ">Amount:</p> -->
                                         <p class="text-sm font-medium text-nowrap text-slate-600">GHS 3,000.00</p>
                                     </div>
                                </div>
@@ -127,17 +93,20 @@
                             <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
                                <div class="">
                                     <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                        <p class="text-sm font-medium text-slate-600">Uniform</p>
-                                        <p class="text-xs text-slate-400">Qty: 3</p>
+                                        <p class="text-sm font-medium text-blue-500">Uniform</p>
+                                       
                                     </div>
-                                    <div class=" w-[180px] p-[0.5rem]">
+                                    <div class=" w-[280px] p-[0.5rem]">
                                         <div class="flex items-center justify-between">
-                                            <p class="text-xs text-slate-500 ">Unit Price:</p>
-                                            <p class="text-xs text-slate-400 ">GHS 300.00</p>
+                                            <p class="text-xs text-slate-700 ">Unit Price:</p>
+                                            <p class="text-xs text-slate-700 ">GHS 300.00</p>
+                                        </div>
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-xs text-slate-700">Qty: </p>
+                                            <p class="text-xs text-slate-700 ">3</p>
                                         </div>
                                     </div>
                                     <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
-                                        <!-- <p class="text-xs text-slate-600 ">Amount:</p> -->
                                         <p class="text-sm font-medium text-nowrap text-slate-600">GHS 900.00</p>
                                     </div>
                                </div>
@@ -145,17 +114,19 @@
                             <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
                                <div class="">
                                     <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                        <p class="text-sm font-medium text-slate-600">Books</p>
-                                        <p class="text-xs text-slate-400">Qty: 20</p>
+                                        <p class="text-sm font-medium text-blue-500">Books</p>
                                     </div>
-                                    <div class=" w-[180px] p-[0.5rem]">
+                                    <div class=" w-[280px] p-[0.5rem]">
                                         <div class="flex items-center justify-between">
-                                            <p class="text-xs text-slate-500 ">Unit Price:</p>
-                                            <p class="text-xs text-slate-400 ">GHS 50.00</p>
+                                            <p class="text-xs text-slate-700 ">Unit Price:</p>
+                                            <p class="text-xs text-slate-700 ">GHS 50.00</p>
+                                        </div>
+                                        <div class="flex items-center justify-between">
+                                            <p class="text-xs text-slate-700">Qty: </p>
+                                            <p class="text-xs text-slate-700 ">20</p>
                                         </div>
                                     </div>
                                     <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
-                                        <!-- <p class="text-xs text-slate-600 ">Amount:</p> -->
                                         <p class="text-sm font-medium text-nowrap text-slate-600">GHS 1,000.00</p>
                                     </div>
                                </div>
@@ -163,33 +134,21 @@
                           
                         </div>
                     </div>
-                    <!-- <p class="text-xs text-slate-400 mt-1">Swipe left to view more items</p> -->
                 </div>
-                <!-- Tax -->
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-semibold text-slate-600">Tax</p>
-                    <p class="text-sm font-medium text-slate-500">GHS 0.00</p>
+                    <p class="text-sm font-bold text-blue-500">Tax</p>
+                    <p class="text-sm text-slate-700">GHS 0.00</p>
                 </div>
-
-                <!-- Status -->
-                <!-- <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-bold text-slate-600">Status</p>
-                    <span class="bg-red-100 w-[80px] text-center text-red-600 px-3 py-1 rounded-full text-xs font-bold">
-                        OVERDUE
-                    </span>
-                </div> -->
             </div>
 
-            <!-- Total Amount -->
             <div class="pt-4 mt-4 border-t border-gray-200">
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-lg font-medium text-slate-600">Total</p>
-                    <p class="text-lg font-semibold text-gray-500">GHS 4,900.00</p>
+                    <p class="text-[20px] font-medium text-blue-500">Total</p>
+                    <p class="text-[25px] font-bold text-slate-700">GHS 4,900.00</p>
                 </div>
             </div>
         </section>
 
-        <!-- Action Buttons -->
         <section class="mt-8 space-y-2">
             <button class="w-full bg-[#FC5944] hover:bg-[#e54a35] transition-colors py-3 rounded-full shadow-md">
                 <a href="payment-methods.html" class="text-white uppercase font-bold text-sm block">
@@ -198,12 +157,11 @@
             </button>
 
             <p class="text-xs text-center text-gray-500">
-                <a href="#!" class="text-blue-800 underline font-bold">Sign In</a> 
+                <a href="#!" class="text-blue-500 underline font-bold">Sign In</a> 
                 to view History
             </p>
         </section>
 
-        <!-- App Downloads -->
         <section class="mt-4 text-center">
             <div class="100 p-4 rounded-xl ">
                 <p class="text-xs text-gray-600 mb-3">Get better experience with our Native App</p>
