--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             </div>
             <div class="bg-gray-50 border border-slate-200 p-4 rounded-lg">
                 <div class="">
-                   <p class="text-sm font-medium text-blue-500">
+                   <p class="text-sm  text-blue-500">
                         Invoice for: 
                    </p>
                     <span class="text-sm font-regular block text-slate-700 my-1 flex justify-between">
                         Ennam's School fees
-                        <!-- <small class="text-[13px] text-blue-500 font-medium">Class: (6) </small> -->
+                        <!-- <small class="text-[13px] text-blue-500 ">Class: (6) </small> -->
                     </span>
                 </div>
                 <hr>
                 <div class=" mt-1">
-                    <div class="text-sm font-medium text-blue-500">
+                    <div class="text-sm  text-blue-500">
                         Invoice from: 
                     </div>
                     <div class="flex text-sm gap-[0.3rem]">
@@ -46,17 +46,17 @@
         <section class="space-y-4 p-4 bg-gray-50 rounded-xl shadow-sm border border-slate-200">
             <div class="space-y-4">
                 <div class="flex flex-col gap-[0.1rem]  rounded-lg">
-                    <p class="text-sm font-bold text-blue-500">Transaction Date</p>
+                    <p class="text-sm text-blue-500">Transaction Date</p>
                     <p class="text-sm text-slate-700">07-SEP-2024 22:00</p>
                 </div>
 
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-bold text-blue-500">Invoice ID</p>
+                    <p class="text-sm text-blue-500">Invoice ID</p>
                     <p class="text-sm text-slate-700">APZQ - 1ED810001</p>
                 </div>
 
                 <div class="flex flex-col gap-[0.1rem] items-start">
-                    <p class="text-sm font-bold text-blue-500">Description</p>
+                    <p class="text-sm text-blue-500">Description</p>
                     <textarea 
                         class="w-[100%] text-sm text-slate-700 bg-transparent resize-none border border-slate-400 border-opacity-10 rounded-lg p-2" 
                         rows="2"
@@ -64,7 +64,7 @@
                     >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptates quod veritatis</textarea>
                 </div>
                 <div class="flex flex-col gap-[0.1rem] items-start">
-                    <p class="text-sm font-bold text-blue-500 mb-2">Items</p>
+                    <p class="text-sm text-blue-500 mb-2">Items</p>
                     <div class="relative w-full">
                         <div class="carousel-container fade-edge flex overflow-x-auto pb-4 space-x-3" 
                             id="itemsCarousel"
@@ -73,7 +73,7 @@
                             <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
                                <div class="">
                                     <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                        <p class="text-sm font-medium text-blue-500">School Fees </p>
+                                        <p class="text-sm text-slate-700">School Fees </p>
                                     </div>
                                     <div class=" w-[280px] p-[0.5rem]">
                                         <div class="flex items-center justify-between">
@@ -93,7 +93,7 @@
                             <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
                                <div class="">
                                     <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                        <p class="text-sm font-medium text-blue-500">Uniform</p>
+                                        <p class="text-sm text-slate-700">Uniform</p>
                                        
                                     </div>
                                     <div class=" w-[280px] p-[0.5rem]">
@@ -114,7 +114,7 @@
                             <div class="carousel-item bg-white py-3 rounded-xl shadow-sm border border-slate-200">
                                <div class="">
                                     <div class="flex justify-between items-center border-b border-slate-200 mb-1 px-[0.5rem]">
-                                        <p class="text-sm font-medium text-blue-500">Books</p>
+                                        <p class="text-sm text-slate-700">Books</p>
                                     </div>
                                     <div class=" w-[280px] p-[0.5rem]">
                                         <div class="flex items-center justify-between">
@@ -136,7 +136,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col gap-[0.1rem]">
-                    <p class="text-sm font-bold text-blue-500">Tax</p>
+                    <p class="text-sm text-blue-500">Tax</p>
                     <p class="text-sm text-slate-700">GHS 0.00</p>
                 </div>
             </div>
