--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         Invoice from: 
                     </div>
                     <div class="flex text-sm gap-[0.3rem]">
-                        <i class="fa-solid fa-circle-check text-green-500 text-12px mr-[0.3rem] mt-[0.5rem]"></i>
+                        <i class="fa-solid fa-circle-check text-slate-500 text-12px mr-[0.3rem] mt-[0.5rem]"></i>
                         <div class="">
                             <span class=" text-slate-700 block mt-1">Christ Ambassadors School</span>
                         </div>
