--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                         Invoice from: 
                     </div>
                     <div class="flex text-sm gap-[0.3rem]">
-                        <i class="fa-solid fa-circle-check text-slate-500 text-12px mr-[0.3rem] mt-[0.5rem]"></i>
                         <div class="">
                             <span class=" text-slate-700 block mt-1">Christ Ambassadors School</span>
                         </div>
@@ -85,8 +84,9 @@
                                             <p class="text-xs text-slate-700 ">1</p>
                                         </div>
                                     </div>
-                                    <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
-                                        <p class="text-sm font-medium text-nowrap text-slate-600">GHS 3,000.00</p>
+                                    <div class="flex items-center justify-between border-t border-slate-400 border-opacity-10 px-[0.5rem]">
+                                        <p class="text-sm text-slate-700">Amount: </p>
+                                        <p class="text-sm text-nowrap text-slate-600">GHS 3,000.00</p>
                                     </div>
                                </div>
                             </div>
@@ -106,8 +106,9 @@
                                             <p class="text-xs text-slate-700 ">3</p>
                                         </div>
                                     </div>
-                                    <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
-                                        <p class="text-sm font-medium text-nowrap text-slate-600">GHS 900.00</p>
+                                    <div class="flex items-center justify-between border-t border-slate-400 border-opacity-10 px-[0.5rem]">
+                                        <p class="text-sm text-slate-700">Amount: </p>
+                                        <p class="text-sm text-nowrap text-slate-600">GHS 900.00</p>
                                     </div>
                                </div>
                             </div>
@@ -126,8 +127,9 @@
                                             <p class="text-xs text-slate-700 ">20</p>
                                         </div>
                                     </div>
-                                    <div class="flex items-center justify-center border-t border-slate-400 border-opacity-10">
-                                        <p class="text-sm font-medium text-nowrap text-slate-600">GHS 1,000.00</p>
+                                    <div class="flex items-center justify-between border-t border-slate-400 border-opacity-10 px-[0.5rem]">
+                                        <p class="text-sm text-slate-700">Amount: </p>
+                                        <p class="text-sm text-nowrap text-slate-600">GHS 1,000.00</p>
                                     </div>
                                </div>
                             </div>
